# aws-lambda-rust-runtime

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.rie  Makefile  NOTICE  README.md  aliases.js  crates.js  help.html  index.html  rust-toolchain  search-index.js  settings.html  source-files.js
examples/advanced-appconfig-feature-flags/: Cargo.toml  README.md
examples/advanced-appconfig-feature-flags/cdk/: cdk.json  package-lock.json  package.json
examples/advanced-appconfig-feature-flags/src/: appconfig.rs  main.rs
examples/advanced-sqs-partial-batch-failures/: Cargo.toml  README.md
examples/advanced-sqs-partial-batch-failures/src/: main.rs
examples/basic-cognito-post-confirmation/: Cargo.toml  README.md
examples/basic-cognito-post-confirmation/src/: main.rs
examples/basic-error-error-crates-integration/: Cargo.toml  README.md
examples/basic-error-error-crates-integration/src/: main.rs
examples/basic-error-thiserror/: Cargo.toml
examples/basic-error-thiserror/src/: main.rs
examples/basic-lambda-external-runtime/: Cargo.toml  README.md
examples/basic-lambda-external-runtime/src/: main.rs
examples/basic-s3-object-lambda-thumbnail/: Cargo.toml  README.md
examples/basic-s3-object-lambda-thumbnail/src/: main.rs  s3.rs
examples/basic-s3-thumbnail/: Cargo.toml  README.md
examples/basic-s3-thumbnail/src/: main.rs  s3.rs  s3client.rs
examples/basic-sdk/: Cargo.toml  README.md
examples/basic-sdk/src/: main.rs
examples/basic-shared-resource/: Cargo.toml  README.md
examples/basic-shared-resource/src/: main.rs
examples/basic-sqs/: Cargo.toml  README.md
examples/basic-sqs/src/: main.rs
examples/basic-streaming-response/: Cargo.toml  README.md
examples/basic-streaming-response/src/: main.rs
examples/extension-combined/: Cargo.toml  README.md
examples/extension-combined/src/: main.rs
examples/extension-internal-flush/: Cargo.toml  README.md
examples/extension-internal-flush/src/: main.rs
json-impl/: Cargo.toml
json-impl/src/: lib.rs
lambda/: Cargo.toml  all.html  attr.lambda.html  fn.handler_fn.html  fn.run.html  fn.run_simulated.html  index.html  sidebar-items.js  struct.Config.html  struct.Context.html  struct.HandlerFn.html  trait.Handler.html
lambda-attributes/: Cargo.toml
lambda-attributes/src/: lib.rs
lambda-events/: Cargo.toml  LICENSE  README.md
lambda-events/src/: encodings.rs  lib.rs  time_window.rs
lambda-events/src/custom_serde/: codebuild_time.rs  float_unix_epoch.rs  headers.rs  http_method.rs  iam.rs  mod.rs  query_string_parameters.rs
lambda-events/src/encodings/: http.rs  mod.rs  time.rs
lambda-events/src/event/: mod.rs
lambda-events/src/fixtures/: example-activemq-event.json  example-alb-lambda-target-request-headers-only.json  example-alb-lambda-target-request-multivalue-headers.json  example-alb-lambda-target-response.json  example-apigw-console-request.json  example-apigw-console-test-request.json  example-apigw-custom-auth-request-type-request.json  example-apigw-custom-auth-request.json  example-apigw-custom-auth-response-with-condition.json  example-apigw-custom-auth-response-with-single-value-action.json  example-apigw-custom-auth-response-with-single-value-resource.json  example-apigw-custom-auth-response.json  example-apigw-request-catch-all.json  example-apigw-request-multi-value-parameters.json  example-apigw-request.json  (+133 more)
lambda-extension/: Cargo.toml  README.md
lambda-extension/examples/: basic.rs  combined.rs  custom_events.rs  custom_logs_service.rs  custom_trait_implementation.rs  error_handling.rs  logs.rs
lambda-extension/src/: error.rs  events.rs  extension.rs  lib.rs  logs.rs  requests.rs  runtime.rs  telemetry.rs
lambda-http/: Cargo.toml  README.md
lambda-http/examples/: basic.rs  hello-cors.rs  hello-http-without-macros.rs  hello-http.rs  hello-raw-http-path.rs  hello-trace.rs  hello-tuple.rs  hello.rs  shared-resources-example.rs
lambda-http/src/: body.rs  deserializer.rs  ext.rs  lib.rs  request.rs  response.rs  streaming.rs  strmap.rs
lambda-integration-tests/: Cargo.toml  samconfig.toml  template.yaml
lambda-integration-tests/python/: main.py
lambda-integration-tests/src/: authorizer.rs  helloworld.rs
lambda-integration-tests/tests/: integration_test.rs
lambda-runtime/: Cargo.toml  build.rs
lambda-runtime-api-client/: Cargo.toml  README.md
lambda-runtime-api-client/src/: body.rs  error.rs  lib.rs  tracing.rs
lambda-runtime-client/: Cargo.toml
lambda-runtime-client-simple/: Cargo.toml
lambda-runtime-client-simple/examples/: basic.rs  bootstrap.rs
lambda-runtime-client-simple/src/: client.rs  client_ext.rs  hyper_tower.rs  lib.rs  main.rs  mock.rs  settings.rs  types.rs
lambda-runtime-client/src/: client.rs  error.rs  lib.rs
lambda-runtime-core/: Cargo.toml  build.rs
lambda-runtime-core/examples/: simple.rs
lambda-runtime-core/src/: context.rs  env.rs  error.rs  handler.rs  lib.rs  runtime.rs
lambda-runtime-errors/: Cargo.toml  errorgen.py
lambda-runtime-errors-derive/: Cargo.toml
lambda-runtime-errors-derive/src/: lib.rs
lambda-runtime-errors-derive/tests/: tests.rs
lambda-runtime-errors/src/: error_ext_impl.rs  lib.rs
lambda-runtime-server/: Cargo.toml
lambda-runtime-server/src/: main.rs  types.rs
lambda-runtime/examples/: README.md  async.rs  basic-borrowed.rs  basic.rs  custom_error.rs  custom_error_failure.rs  custom_error_failure_future.rs  error-handling.rs  failure_error.rs  shared_resource.rs  with_custom_runtime.rs
lambda-runtime/src/: client.rs  context.rs  crac.rs  deserializer.rs  diagnostic.rs  env.rs  error.rs  error_ext_impl.rs  lib.rs  requests.rs  runtime.rs  simulated.rs  streaming.rs  types.rs
lambda/examples/: README.md  basic.rs  error-handling.rs  hello-with-ctx.rs  hello-without-macro-log.rs  hello-without-macro-tracing.rs  hello-without-macro.rs  hello.rs  macro.rs  readme.md
lambda/src/: client.rs  error_hook.rs  lib.rs  requests.rs  simulated.rs  support.rs  types.rs
lambda/tests/: tests.rs
lambda/types/: struct.Context.html
(+549 files in other folders)
