[workspace]
resolver = "2"
members = [
    "lambda-http",
    "lambda-integration-tests",
    "lambda-runtime-api-client",
    "lambda-runtime",
    "lambda-extension",
    "lambda-events",
]

exclude = ["examples"]

[workspace.dependencies]
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "serde",
    "std",
] }
futures = "0.3"
futures-channel = "0.3"
futures-util = "0.3"
http = "1.2"
http-body = "1.0"
http-body-util = "0.1"
http-serde = "2.1"
hyper = "1.5"
hyper-util = "0.1.10"
pin-project-lite = "0.2"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3"
