[package]
name = "lambda-attributes"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4.30", features = ["nightly"] }
syn = { version = "1.0.5", features = ["full"] }
quote = "1"
proptest = "0.9.3"
