[package]
name = "aws_lambda_events"
version = "0.9.0"
description = "AWS Lambda event definitions"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>",
  "David Calavera <dcalaver@amazon.com>",
]
license = "MIT"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
readme = "README.md"
keywords = ["lambda", "aws", "amazon", "events", "S3"]
categories = ["api-bindings", "encoding", "web-programming"]

[dependencies]
base64 = "0.21"
http = "0.2"
http-body = "0.4"
http-serde = "^1"
serde = "^1"
serde_derive = "^1"
serde_with = { version = "^3", features = ["json"], optional = true }
serde_json = "^1"
serde_dynamo = { version = "^4.1", optional = true }
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4.23", default-features = false, features = [
  "clock",
  "serde",
  "std",
], optional = true }
query_map = { version = "^0.6", features = ["serde", "url-query"], optional = true }
flate2 = { version = "1.0.24", optional = true }

[dev-dependencies]
pretty_assertions = "1.3"

[features]
default = [
  "activemq",
  "alb",
  "apigw",
  "appsync",
  "autoscaling",
  "chime_bot",
  "clientvpn",
  "cloudwatch_events",
  "cloudwatch_logs",
  "code_commit",
  "codebuild",
  "codedeploy",
  "codepipeline_cloudwatch",
  "codepipeline_job",
  "cognito",
  "config",
  "connect",
  "dynamodb",
  "ecr_scan",
  "firehose",
  "iam",
  "iot",
  "iot_1_click",
  "iot_button",
  "iot_deprecated",
  "kafka",
  "kinesis",
  "kinesis_analytics",
  "lambda_function_urls",
  "lex",
  "rabbitmq",
  "s3",
  "s3_batch_job",
  "ses",
  "sns",
  "sqs",
  "streams",
]

activemq = []
alb = ["query_map"]
apigw = ["query_map"]
appsync = []
autoscaling = ["chrono"]
chime_bot = ["chrono"]
clientvpn = []
cloudwatch_events = ["chrono"]
cloudwatch_logs = ["flate2"]
code_commit = ["chrono"]
codebuild = ["chrono"]
codedeploy = ["chrono"]
codepipeline = []
codepipeline_cloudwatch = ["chrono"]
codepipeline_job = []
cognito = []
config = []
connect = []
dynamodb = ["chrono", "serde_dynamo", "streams"]
ecr_scan = []
firehose = []
iam = []
iot = ["iam"]
iot_1_click = []
iot_button = []
iot_deprecated = ["iot"]
kafka = []
kinesis = []
kinesis_analytics = ["kinesis"]
lambda_function_urls = []
lex = []
rabbitmq = []
s3 = ["chrono"]
s3_batch_job = ["s3"]
ses = ["chrono"]
sns = ["chrono", "serde_with"]
sqs = ["serde_with"]
streams = []
