[package]
name = "aws_lambda_events"
version = "0.12.1"
description = "AWS Lambda event definitions"
authors = [
  "Christian Legnitto <christian@legnitto.com>",
  "Sam Rijs <srijs@airpost.net>",
  "David Calavera <dcalaver@amazon.com>",
]
license = "MIT"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
readme = "README.md"
keywords = ["lambda", "aws", "amazon", "events", "S3"]
categories = ["api-bindings", "encoding", "web-programming"]
edition = "2021"

[dependencies]
base64 = "0.21"
http = { version = "0.2", optional = true }
http-body = { version = "0.4", optional = true }
http-serde = { version = "^1", optional = true }
serde = { version = "^1", features = ["derive"] }
serde_with = { version = "^3", features = ["json"], optional = true }
serde_json = "^1"
serde_dynamo = { version = "^4.1", optional = true }
bytes = { version = "1", features = ["serde"], optional = true }
chrono = { version = "0.4.31", default-features = false, features = [
  "clock",
  "serde",
  "std",
], optional = true }
query_map = { version = "^0.7", features = [
  "serde",
  "url-query",
], optional = true }
flate2 = { version = "1.0.24", optional = true }

[features]
default = [
  "activemq",
  "alb",
  "apigw",
  "appsync",
  "autoscaling",
  "chime_bot",
  "clientvpn",
  "cloudformation",
  "cloudwatch_events",
  "cloudwatch_logs",
  "code_commit",
  "codebuild",
  "codedeploy",
  "codepipeline_cloudwatch",
  "codepipeline_job",
  "cognito",
  "config",
  "connect",
  "dynamodb",
  "ecr_scan",
  "firehose",
  "iam",
  "iot",
  "iot_1_click",
  "iot_button",
  "iot_deprecated",
  "kafka",
  "kinesis",
  "kinesis_analytics",
  "lambda_function_urls",
  "lex",
  "rabbitmq",
  "s3",
  "s3_batch_job",
  "ses",
  "sns",
  "sqs",
  "streams",
  "documentdb",
  "eventbridge",
]

activemq = []
alb = ["bytes", "http", "http-body", "http-serde", "query_map"]
apigw = ["bytes", "http", "http-body", "http-serde", "query_map"]
appsync = []
autoscaling = ["chrono"]
chime_bot = ["chrono"]
clientvpn = []
cloudformation = []
cloudwatch_events = ["chrono"]
cloudwatch_logs = ["flate2"]
code_commit = ["chrono"]
codebuild = ["chrono"]
codedeploy = ["chrono"]
codepipeline = []
codepipeline_cloudwatch = ["chrono"]
codepipeline_job = []
cognito = []
config = []
connect = []
dynamodb = ["chrono", "serde_dynamo", "streams"]
ecr_scan = []
firehose = ["chrono"]
iam = []
iot = ["bytes", "http", "http-body", "http-serde", "iam"]
iot_1_click = []
iot_button = []
iot_deprecated = ["iot"]
kafka = ["chrono"]
kinesis = ["chrono"]
kinesis_analytics = ["kinesis"]
lambda_function_urls = ["bytes", "http", "http-body", "http-serde"]
lex = []
rabbitmq = []
s3 = ["bytes", "chrono", "http", "http-body", "http-serde"]
s3_batch_job = ["s3"]
ses = ["chrono"]
sns = ["chrono", "serde_with"]
sqs = ["serde_with"]
streams = []
documentdb = []
eventbridge = ["chrono", "serde_with"]
