[package]
name = "lambda-extension"
version = "0.9.0"
edition = "2021"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Extension API"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "README.md"

[dependencies]
async-stream = "0.3"
bytes = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "client", "server"] }
hyper-util = { workspace = true }
lambda_runtime_api_client = { version = "0.9", path = "../lambda-runtime-api-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1.0", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
] }
tokio-stream = "0.1.2"
tower = { version = "0.4", features = ["make", "util"] }
