[package]
name = "lambda-extension"
version = "0.12.1"
edition = "2021"
rust-version = "1.81.0"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Extension API"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "README.md"

[features]
default = ["tracing"]
tracing = ["lambda_runtime_api_client/tracing"]

[dependencies]
async-stream = "0.3"
chrono = { workspace = true, features = ["serde"] }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "client", "server"] }
hyper-util = { workspace = true }
lambda_runtime_api_client = { version = "0.12", path = "../lambda-runtime-api-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "1.43", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
] }
tokio-stream = "0.1.17"
tower = { workspace = true, features = ["make", "util"] }
tracing = { version = "0.1", features = ["log"] }

[package.metadata.docs.rs]
all-features = true
