[package]
name = "lambda_http"
version = "0.13.0"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
edition = "2021"
description = "Application Load Balancer and API Gateway event types for AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime"
categories = ["web-programming::http-server"]
readme = "README.md"

[features]
default = ["apigw_rest", "apigw_http", "apigw_websockets", "alb", "tracing"]
apigw_rest = []
apigw_http = []
apigw_websockets = []
alb = []
pass_through = []
tracing = ["lambda_runtime/tracing"] # enables access to the Tracing utilities
opentelemetry = ["lambda_runtime/opentelemetry"] # enables access to the OpenTelemetry layers and utilities
anyhow = ["lambda_runtime/anyhow"] # enables From<T> for Diagnostic for anyhow error types, see README.md for more info
eyre = ["lambda_runtime/eyre"] # enables From<T> for Diagnostic for eyre error types, see README.md for more info
miette = ["lambda_runtime/miette"] # enables From<T> for Diagnostic for miette error types, see README.md for more info
simd_json = [ "aws_lambda_json_impl/simd", "aws_lambda_events/simd_json", "lambda_runtime/simd_json" ]

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
encoding_rs = "0.8"
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
lambda_runtime = { version = "0.13.0", path = "../lambda-runtime" }
mime = "0.3"
percent-encoding = "2.2"
pin-project-lite = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
aws_lambda_json_impl = { path = "../json-impl" }
serde_urlencoded = "0.7"
tokio-stream = "0.1.2"
url = "2.2"

[dependencies.aws_lambda_events]
path = "../lambda-events"
version = "0.15.0"
default-features = false
features = ["alb", "apigw"]

[dev-dependencies]
axum-core = "0.4.3"
axum-extra = { version = "0.9.2", features = ["query"] }
lambda_runtime_api_client = { version = "0.11.1", path = "../lambda-runtime-api-client" }
log = "^0.4"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }
