[package]
name = "lambda_http"
version = "0.15.1"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
edition = "2021"
rust-version = "1.81.0"
description = "Application Load Balancer and API Gateway event types for AWS Lambda"
keywords = ["AWS", "Lambda", "APIGateway", "ALB", "API"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime"
categories = ["web-programming::http-server"]
readme = "README.md"

[features]
default = ["apigw_rest", "apigw_http", "apigw_websockets", "alb", "tracing"]
apigw_rest = []
apigw_http = []
apigw_websockets = []
alb = []
pass_through = []
catch-all-fields = ["aws_lambda_events/catch-all-fields"]
tracing = ["lambda_runtime/tracing"] # enables access to the Tracing utilities
opentelemetry = ["lambda_runtime/opentelemetry"] # enables access to the OpenTelemetry layers and utilities
anyhow = ["lambda_runtime/anyhow"] # enables From<T> for Diagnostic for anyhow error types, see README.md for more info
eyre = ["lambda_runtime/eyre"] # enables From<T> for Diagnostic for eyre error types, see README.md for more info
miette = ["lambda_runtime/miette"] # enables From<T> for Diagnostic for miette error types, see README.md for more info

[dependencies]
bytes = { workspace = true }
encoding_rs = "0.8"
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
lambda_runtime = { version = "0.14.2", path = "../lambda-runtime" }
mime = "0.3"
percent-encoding = "2.2"
pin-project-lite = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_urlencoded = "0.7"
tokio-stream = "0.1.2"
url = "2.2"

[dependencies.aws_lambda_events]
path = "../lambda-events"
version = "0.17.0"
default-features = false
features = ["alb", "apigw"]

[dev-dependencies]
axum-core = "0.5.0"
axum-extra = { version = "0.10.0", features = ["query"] }
lambda_runtime_api_client = { version = "0.12.1", path = "../lambda-runtime-api-client" }
log = "^0.4"
maplit = "1.0"
tokio = { version = "1.0", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
