[package]
name = "lambda-integration-tests"
version = "0.1.0"
authors = ["Maxime David"]
edition = "2021"
rust-version = "1.81.0"
description = "AWS Lambda Runtime integration tests"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "../README.md"

[dependencies]
lambda_runtime = { path = "../lambda-runtime", features = ["tracing", "graceful-shutdown"] }
aws_lambda_events = { path = "../lambda-events" }
serde_json = "1.0.121"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }

[features]
catch-all-fields = ["aws_lambda_events/catch-all-fields"]

[[bin]]
name = "helloworld"
path = "src/helloworld.rs"

[[bin]]
name = "authorizer"
path = "src/authorizer.rs"
