[package]
name = "lambda_runtime_api_client"
version = "0.8.0"
edition = "2021"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Runtime interaction API"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "README.md"

[dependencies]
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["http1", "client"] }
hyper-util = { version = "0.1.1", features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
tower-service = "0.3"
tokio = { version = "1.0", features = ["io-util"] }
