[package]
name = "lambda_runtime_api_client"
version = "0.8.0"
edition = "2021"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Runtime interaction API"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "README.md"

[dependencies]
bytes = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "client"] }
hyper-util = { workspace = true, features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
tower = { workspace = true, features = ["util"] }
tower-service = { workspace = true }
tokio = { version = "1.0", features = ["io-util"] }
