[package]
name = "lambda_runtime_api_client"
version = "0.12.2"
edition = "2021"
rust-version = "1.81.0"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Runtime interaction API"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
bytes = { workspace = true }
futures-channel = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "client"] }
hyper-util = { workspace = true, features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
tower = { workspace = true, features = ["util"] }
tracing = { version = "0.1", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter"], optional = true }

[package.metadata.docs.rs]
all-features = true
