[package]
name = "simple-lambda-runtime"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[dependencies]
bytes = "^0.4"
failure = "^0.1"
futures = "^0.1"
hyper = "^0.12"
http = "^0.1"
tokio = "^0.1"
tokio-threadpool = "^0.1"
envy = "0.3"
tower-service = "0.2"
tokio-trace = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tokio-trace" }
tokio-trace-fmt = { git = "https://github.com/tokio-rs/tokio-trace-nursery", branch = "eliza/fmt" }
serde = { version = "^1" }
serde_derive = "^1"
serde_json = "^1"

[patch.crates-io]
tokio-trace = { git = "https://github.com/tokio-rs/tokio", branch = "eliza/tokio-trace" }