[package]
name = "simple-lambda-runtime"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[dependencies]
bytes = "^0.4"
failure = "^0.1"
futures = "^0.1"
hyper = "^0.12"
http = "^0.1"
headers = "0.2"
envy = "0.3"
tokio = "^0.1"
lazy_static = "1.3"
tokio-threadpool = "^0.1"
tokio-trace = { git = "https://github.com/tokio-rs/tokio" }
tokio-trace-fmt = { git = "https://github.com/tokio-rs/tokio-trace-nursery" }
tower = { git = "https://github.com/tower-rs/tower" }
tower-add-origin = { git = "https://github.com/tower-rs/tower-http" }
tower-http-service = { git = "https://github.com/tower-rs/tower-http" }
tower-hyper = { git = "https://github.com/tower-rs/tower-hyper" }
tower-mock = { git = "https://github.com/tower-rs/tower" }
tower-retry = { git = "https://github.com/tower-rs/tower" }
tower-timeout = { git = "https://github.com/tower-rs/tower" }
tower-buffer = { git = "https://github.com/tower-rs/tower" }
tower-in-flight-limit =  { git = "https://github.com/tower-rs/tower" }
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "^1"

[dev-dependencies]
tokio-io = "0.1.12"
proptest = "0.9"