[package]
name = "lambda_runtime_client"
version = "0.1.0"
authors = ["Stefano Buliani", "David Barsky"]
description = "Client SDK for AWS Lambda's runtime APIs"
keywords = ["AWS", "Lambda", "Runtime", "API", "Client"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime_client"

[dependencies]
hyper = "0.12"
tokio = "0.1"
http = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "0.4"
backtrace = "0.3"
