[package]
name = "lambda_runtime_client"
version = "0.2.2"
authors = ["Stefano Buliani", "David Barsky"]
edition = "2018"
description = "Client SDK for AWS Lambda's runtime APIs"
keywords = ["AWS", "Lambda", "Runtime", "API", "Client"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime_client"
readme = "../README.md"

[badges]
travis-ci = { repository = "awslabs/aws-lambda-rust-runtime" }
maintenance = { status = "actively-developed" }

[dependencies]
hyper = "0.12"
tokio = "0.1"
http = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "0.4"
lambda_runtime_errors = { path = "../lambda-runtime-errors", version = "^0.1" }
failure = "^0.1"

[dev-dependencies]
chrono = "^0.4"
lambda_runtime_errors_derive = { path = "../lambda-runtime-errors-derive", version = "^0.1" }