[package]
name = "lambda_runtime_core"
version = "0.1.2"
authors = ["Stefano Buliani", "David Barsky"]
description = "Rust runtime for AWS Lambda"
keywords = ["AWS", "Lambda", "Runtime", "Rust"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime_core"
edition = "2018"

[dependencies]
log = "^0.4"
hyper = "^0.12"
tokio = "^0.1"
backtrace = "^0.3"
chrono = "^0.4"
failure = "^0.1"
lambda_runtime_client = { path = "../lambda-runtime-client", version = "^0.2" }
lambda_runtime_errors = { path = "../lambda-runtime-errors", version = "^0.1" }

[dev-dependencies]
simple_logger = "^1.3"

[build-dependencies]
rustc_version = "^0.2"