[package]
name = "lambda_runtime_errors_derive"
version = "0.1.0"
authors = ["Stefano Buliani", "David Barsky"]
edition = "2018"
description = "Rust runtime errors derive for AWS Lambda"
keywords = ["AWS", "Lambda", "Runtime", "Rust"]
license = "Apache-2.0"
homepage = "https://github.com/awslabs/aws-lambda-rust-runtime"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
documentation = "https://docs.rs/lambda_runtime"

[dependencies]
log = "^0.4"
syn = "^0.15"
synstructure = "^0.10"
proc-macro2 = "^0.4" 
quote = "^0.6"

[dev-dependencies]
lambda_runtime_errors = { path = "../lambda-runtime-errors", version = "^0.1" }
failure = "^0.1"

[lib]
proc-macro = true