[package]
name = "lambda-runtime-server"
version = "0.1.0"
authors = ["David Barsky <dbarsky@amazon.com>"]
edition = "2018"

[dependencies]
bytes = "^0.4"
failure = "^0.1"
headers = { git = "https://github.com/hyperium/headers.git" }
http = "^0.1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
warp = "^0.1"
lazy_static = "1.2.0"
uuid = { version = "0.7.1", features = ["v4"] }