[package]
name = "lambda_runtime"
version = "0.8.3"
authors = [
    "David Calavera <dcalaver@amazon.com>",
    "Harold Sun <sunhua@amazon.com>",
]
description = "AWS Lambda Runtime"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/aws-lambda-rust-runtime"
categories = ["web-programming::http-server"]
keywords = ["AWS", "Lambda", "API"]
readme = "../README.md"

[features]
default = ["simulated"]
simulated = []

[dependencies]
async-stream = "0.3"
base64 = "0.21.0"
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-serde = { workspace = true }
hyper = { workspace = true, features = [
    "http1",
    "client",
] }
hyper-util = { workspace = true, features = [
    "client",
    "client-legacy",
    "http1",
    "tokio",
] }
lambda_runtime_api_client = { version = "0.8", path = "../lambda-runtime-api-client" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "^1"
serde_path_to_error = "0.1.11"
tokio = { version = "1.0", features = [
    "macros",
    "io-util",
    "sync",
    "rt-multi-thread",
] }
tokio-stream = "0.1.2"
tower = { workspace = true, features = ["util"] }
tracing = { version = "0.1.37", features = ["log"] }

[dev-dependencies]
hyper-util = { workspace = true, features = [
    "client",
    "client-legacy",
    "http1",
    "server",
    "server-auto",
    "tokio",
] }
pin-project-lite = "*"